# HOBH

./: .gitignore  .replit  LICENSE  README.md  main.py  mobile_migration_plan.md  pyproject.toml  replit.nix
.github/workflows/: main.yml
OlympicWeightlifting/: ContentView.swift  Info.plist  OlympicWeightliftingApp.swift
OlympicWeightlifting.xcodeproj/: project.pbxproj
api/: auth.py  database.py  main.py  models.py  schemas.py
assets/: style.css
data/: workouts.csv
ios/FitnessTracker/: README.md
ios/FitnessTracker/FitnessTracker/: Info.plist
ios/FitnessTracker/Sources/App/: FitnessTrackerApp.swift
ios/FitnessTracker/Sources/Models/: MovementModel.swift  ProgressModel.swift  UserModel.swift  WorkoutModel.swift
ios/FitnessTracker/Sources/Services/: APIService.swift
ios/FitnessTracker/Sources/ViewModels/: AuthViewModel.swift  HomeViewModel.swift  ProfileViewModel.swift  ProgressViewModel.swift  WorkoutViewModel.swift
ios/FitnessTracker/Sources/Views/Authentication/: AuthenticationView.swift
ios/FitnessTracker/Sources/Views/Home/: HomeView.swift
ios/FitnessTracker/Sources/Views/Profile/: ProfileView.swift
ios/FitnessTracker/Sources/Views/Progress/: ProgressView.swift
utils/: __init__.py  achievement_manager.py  auth_manager.py  avatar_manager.py  data_manager.py  export_manager.py  gamification.py  models.py  movement_analyzer.py  openai_helper.py  prediction.py  quote_generator.py  recovery_advisor.py  recovery_calculator.py  social_manager.py  visualization.py  wearable_manager.py  wearable_wizard.py
(+1 files in other folders)
