[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "fastapi>=0.115.8",
    "mediapipe>=0.10.21",
    "openai>=1.61.1",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.2.3",
    "passlib[bcrypt]>=1.7.4",
    "plotly>=6.0.0",
    "psycopg2-binary>=2.9.10",
    "py-avataaars>=1.1.2",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.0",
    "trafilatura>=2.0.0",
    "twilio>=9.4.4",
    "uvicorn>=0.34.0",
]
